--- a/carla/src/components/Footer/footer.scss
+++ b/carla/src/components/Footer/footer.scss
@@ -3,6 +3,7 @@
     background-color: #000F60;
     color: #FFE5E5;
     display: flex;
+    font-size: 12px;
     height: 40px;
     justify-content: center;
 }
