--- a/carla/src/components/NavBar/navBar.scss
+++ b/carla/src/components/NavBar/navBar.scss
@@ -10,8 +10,8 @@
 
     .nav-bar-link {
         cursor: pointer;
-        font-size: 24px;
-        font-weight: bold;
+        font-family: 'Rubik Mono One', sans-serif;
+        font-size: 20px;
         width: 20%;
     }
 }
