--- a/carla/src/components/About/about.scss
+++ b/carla/src/components/About/about.scss
@@ -1,4 +1,7 @@
 #about {
     background-color: #FF6F6F;
+    align-items: center;
+    display: flex;
     height: 800px;
+    justify-content: center;
 }
