--- a/carla/src/components/Projects/projects.scss
+++ b/carla/src/components/Projects/projects.scss
@@ -1,4 +1,7 @@
 #projects {
     background-color: #475DD7;
+    align-items: center;
+    display: flex;
     height: 800px;
+    justify-content: center;
 }
