--- a/carla/src/components/Skills/skills.scss
+++ b/carla/src/components/Skills/skills.scss
@@ -1,4 +1,7 @@
 #skills {
     background-color: #FFE5E5;
+    align-items: center;
+    display: flex;
     height: 800px;
+    justify-content: center;
 }
