--- a/carla/src/App.scss
+++ b/carla/src/App.scss
@@ -5,4 +5,9 @@
   .section-container {
     padding-top: 100px;
   }
+
+  .section-header {
+    font-family: 'Rubik Mono One', sans-serif;
+    font-size: 40px;
+  }
 }
