Set up prettier

--- a/carla/src/App.scss
+++ b/carla/src/App.scss
@@ -1,5 +1,5 @@
 .App {
-  font-family: 'Lexend', sans-serif;
+  font-family: "Lexend", sans-serif;
   text-align: center;
 
   .section-container {
@@ -7,7 +7,7 @@
   }
 
   .section-header {
-    font-family: 'Rubik Mono One', sans-serif;
+    font-family: "Rubik Mono One", sans-serif;
     font-size: 40px;
   }
 }
