--- a/carla/src/components/Footer/footer.scss
+++ b/carla/src/components/Footer/footer.scss
@@ -1,9 +1,9 @@
 .footer {
-    align-items: center;
-    background-color: #000F60;
-    color: #FFE5E5;
-    display: flex;
-    font-size: 12px;
-    height: 40px;
-    justify-content: center;
+  align-items: center;
+  background-color: #000f60;
+  color: #ffe5e5;
+  display: flex;
+  font-size: 12px;
+  height: 40px;
+  justify-content: center;
 }
