--- a/carla/src/components/Home/home.scss
+++ b/carla/src/components/Home/home.scss
@@ -1,7 +1,7 @@
 #home {
-    background-color: #FFB0B0;
-    align-items: center;
-    display: flex;
-    height: 800px;
-    justify-content: center;
+  background-color: #ffb0b0;
+  align-items: center;
+  display: flex;
+  height: 800px;
+  justify-content: center;
 }
