--- a/carla/src/components/Contact/contact.scss
+++ b/carla/src/components/Contact/contact.scss
@@ -1,7 +1,7 @@
 #contact {
-    background-color: #B7C7FF;
-    align-items: center;
-    display: flex;
-    height: 800px;
-    justify-content: center;
+  background-color: #b7c7ff;
+  align-items: center;
+  display: flex;
+  height: 800px;
+  justify-content: center;
 }
