--- a/carla/src/components/NavBar/navBar.scss
+++ b/carla/src/components/NavBar/navBar.scss
@@ -1,17 +1,17 @@
 .nav-bar {
-    align-items: center;
-    background-color: #000F60;
-    color: #FFE5E5;
-    display: flex;
-    height: 100px;
-    opacity: 90%;
-    position: fixed;
-    width: 100%;
+  align-items: center;
+  background-color: #000f60;
+  color: #ffe5e5;
+  display: flex;
+  height: 100px;
+  opacity: 90%;
+  position: fixed;
+  width: 100%;
 
-    .nav-bar-link {
-        cursor: pointer;
-        font-family: 'Rubik Mono One', sans-serif;
-        font-size: 20px;
-        width: 20%;
-    }
+  .nav-bar-link {
+    cursor: pointer;
+    font-family: "Rubik Mono One", sans-serif;
+    font-size: 20px;
+    width: 20%;
+  }
 }
