--- a/carla/src/components/Skills/skills.scss
+++ b/carla/src/components/Skills/skills.scss
@@ -1,7 +1,7 @@
 #skills {
-    background-color: #FFE5E5;
-    align-items: center;
-    display: flex;
-    height: 800px;
-    justify-content: center;
+  background-color: #ffe5e5;
+  align-items: center;
+  display: flex;
+  height: 800px;
+  justify-content: center;
 }
