--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 .App {
+  background-color: #ffb0b0;
   font-family: "Lexend", sans-serif;
   text-align: center;
 
@@ -9,5 +10,13 @@
   .section-header {
     font-family: "Rubik Mono One", sans-serif;
     font-size: 40px;
+  }
+
+  .arrow-down {
+    width: 0; 
+    height: 0; 
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    margin-bottom: -40px;
   }
 }
