--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,7 +1,16 @@
-#home {
-  background-color: #ffb0b0;
-  align-items: center;
+#home,
+.home-section {
   display: flex;
+  flex-direction: column;
   height: 800px;
   justify-content: center;
+}
+ 
+#home { 
+  background-color: #ffb0b0;
+  align-items: center;
+
+  .arrow-down {
+    border-top: 40px solid rgba(0, 15, 96, .9);
+  }
 }
