--- a/src/components/NavBar/navBar.scss
+++ b/src/components/NavBar/navBar.scss
@@ -13,5 +13,9 @@
     font-family: "Rubik Mono One", sans-serif;
     font-size: 20px;
     width: 20%;
+
+    &:hover {
+      color: #ff6f6f !important;
+    }
   }
 }
