--- a/src/components/NavBar/navBar.scss
+++ b/src/components/NavBar/navBar.scss
@@ -12,6 +12,7 @@
     cursor: pointer;
     font-family: "Rubik Mono One", sans-serif;
     font-size: 20px;
+    min-width: 160px;
     width: 20%;
 
     &:hover {
