Add content to home section

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 .App {
-  background-color: #ffb0b0;
+  background-color: #ffcccc;
+  color: #000;
   font-family: "Lexend", sans-serif;
   text-align: center;
 
