--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,16 +1,72 @@
 #home,
 .home-section {
-  display: flex;
-  flex-direction: column;
-  height: 800px;
-  justify-content: center;
-}
- 
-#home { 
-  background-color: #ffb0b0;
   align-items: center;
+  display: flex;
+  height: 600px;
+}
 
-  .arrow-down {
-    border-top: 40px solid rgba(0, 15, 96, .9);
+#home {
+  background-color: #ffcccc;
+  flex-direction: column;
+  justify-content: center;
+
+  .home-section {
+    justify-content: space-between;
+    text-align: left;
+    width: 80%;
+
+    .section-text {
+      .section-header {
+        font-size: 60px;
+      }
+
+      .section-description {
+        font-size: 28px;
+        margin-top: 10px;
+      }
+    }
+
+    img {
+      height: 250px;
+      width: 250px;
+    }
+  }
+
+  .top-arrow {
+    border-top: 40px solid rgba(0, 15, 96, 0.9);
+  }
+
+  .bottom-arrow {
+    border-top: 40px solid #ffcccc;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  #home,
+  .home-section {
+    height: 800px;
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  #home {
+    .home-section {
+      flex-direction: column;
+      justify-content: center;
+
+      .section-text {
+        .section-header {
+          font-size: 40px;
+        }
+
+        .section-description {
+          font-size: 24px;
+        }
+      }
+
+      img {
+        margin-top: 50px;
+      }
+    }
   }
 }
