--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 .App {
   background-color: #ffcccc;
   color: #000;
-  font-family: "Lexend", sans-serif;
+  font-family: "Roboto Slab", serif;
   text-align: center;
 
   .section-header {
