--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -3,7 +3,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: 800px;
+  height: 750px;
   justify-content: center;
 
   .section-header {
@@ -54,10 +54,10 @@
           border-color: #475dd7;
           border-radius: 40px;
           box-shadow: 0 1px #0000000b;
-          color: #fff;
+          color: #ffeeee;
           font-size: 16px;
           height: 40px;
-          padding: 6px 20px;
+          padding: 2px 20px 6px 20px;
           text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
           width: 120px;
 
