--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -6,17 +6,62 @@
   height: 750px;
   justify-content: center;
 
-  .section-header {
+  .sub-header {
+    font-size: 24px;
     margin-bottom: 30px;
   }
 
-  .ant-card {
-    min-width: 300px;
-    width: 30%;
+  .contact-section {
+    display: flex;
+    justify-content: space-around;
+    .ant-card {
+      min-width: 500px;
 
-    .ant-card-body {
-      .success-message {
-        font-size: 18px;
+      .ant-card-body {
+        .success-message {
+          font-size: 18px;
+        }
+      }
+    }
+
+    .social {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-left: 50px;
+
+      img,
+      .social-circle {
+        margin: 10px;
+      }
+
+      .behance {
+        img {
+          height: 80px;
+        }
+
+        .behance-icon-hover {
+          display: none;
+        }
+
+        &:hover {
+          .behance-icon {
+            display: none;
+          }
+
+          .behance-icon-hover {
+            display: initial;
+          }
+        }
+      }
+
+      .social-circle {
+        transition: 0.2s all ease;
+        height: 80px;
+
+        &:hover path {
+          fill: #7385e9 !important;
+        }
       }
     }
   }
