--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -14,6 +14,7 @@
   .contact-section {
     display: flex;
     justify-content: space-around;
+
     .ant-card {
       min-width: 500px;
 
@@ -61,6 +62,35 @@
 
         &:hover path {
           fill: #7385e9 !important;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  #contact {
+    height: 900px;
+
+    .contact-section {
+      flex-direction: column;
+
+      .ant-card {
+        min-width: 400px;
+      }
+
+      .social {
+        flex-direction: initial;
+        margin: 50px 0 0 0;
+
+        .social-circle {
+          height: 50px;
+        }
+
+        .behance {
+          img {
+            height: 50px;
+          }
         }
       }
     }
