--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -43,6 +43,13 @@
   }
 }
 
+@media only screen and (max-width: 400px) {
+  #about,
+  .about-section {
+    height: 1250px !important;
+  }
+}
+
 @media only screen and (max-width: 700px) {
   #about,
   .about-section {
