--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -68,6 +68,21 @@
   }
 }
 
+@media only screen and (max-width: 400px) {
+  #contact {
+    .sub-header {
+      font-size: 20px;
+      padding: 0 30px;
+    }
+
+    .contact-section {
+      .ant-card {
+        min-width: 300px !important;
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 800px) {
   #contact {
     height: 900px;
