--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -41,6 +41,22 @@
   }
 }
 
+@media only screen and (max-width: 400px) {
+  #home,
+  .home-section {
+    height: 600px !important;
+  }
+
+  #home {
+    .home-section {
+      img {
+        height: 150px;
+        width: 150px;
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 700px) {
   #home,
   .home-section {
